--- a/Web Manager/Web Manager.csproj
+++ b/Web Manager/Web Manager.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CommonModels\CommonModels.csproj" />
+    <ProjectReference Include="..\PictureProcessing\PictureProcessing.csproj" />
   </ItemGroup>
 
 </Project>
