config for external folder pictures

--- a/Console Manager/Console Manager.csproj
+++ b/Console Manager/Console Manager.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CommonModels\CommonModels.csproj" />
+    <ProjectReference Include="..\PictureProcessing\PictureProcessing.csproj" />
   </ItemGroup>
 
 </Project>
