--- a/Web Student/Web Student.csproj
+++ b/Web Student/Web Student.csproj
@@ -37,7 +37,7 @@
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
-    <Content Update="Views\Homework\AddHomework.cshtml">
+    <Content Update="Views\Homework\AddHomeworkTask.cshtml">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
