--- a/Web Student/appsettings.json
+++ b/Web Student/appsettings.json
@@ -2,8 +2,8 @@
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Web_Manager_v._2-ED186B81-62FB-4F50-873B-251C08848E65;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"DefaultConnection": "Server=192.168.0.107;Database=WebManagerV2;Trusted_Connection=True;MultipleActiveResultSets=true",
-    //"DefaultConnection": "Server=192.168.0.107;Database=WebStudent;User Id=testlogin;Password=testpass"
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=WebStudent;Integrated Security=true"
+    "DefaultConnection": "Server=192.168.0.107;Database=WebStudent;User Id=testlogin;Password=testpass"
+    //"DefaultConnection": "Server=.\\SQLEXPRESS;Database=WebStudent;Integrated Security=true"
 
   },
   "Logging": {
